--- a/mkvid.html
+++ b/mkvid.html
@@ -55,8 +55,8 @@
 					de: "Herunterladen"
 				},
 				Enqueuing: {
-					en: "Sorting",
-					de: "Sortieren"
+					en: "Preparing",
+					de: "Vorbereiten"
 				},
 				Encoding: {
 					en: "Encoding",
